syntax = "proto3";
package pb;

option go_package = "github.com/techschool/simplebank/pb";

message DeleteCartItemRequest {
    int32 product_id = 1;
}

message DeleteCartItemResponse {
    string message = 1;
}